fix overflow-x card services

--- a/src/components/Main/styles.css
+++ b/src/components/Main/styles.css
@@ -2,10 +2,6 @@
   padding-left: 4rem !important;
 }
 
-#section-services {
-  overflow-x: hidden;
-}
-
 #section-about,
 #section-services {
   display: flex;
